Do some UI fixes for the TV to make everything more visible

--- a/client/src/components/Display/MoneyDisplay/BottomContent/Heart/Heart.module.less
+++ b/client/src/components/Display/MoneyDisplay/BottomContent/Heart/Heart.module.less
@@ -1,8 +1,8 @@
 @import './src/less/variables';
 
 .heart {
-  width: 8.75rem;
-  height: 8.75rem;
+  width: 20.75rem;
+  height: 15.75rem;
   background-image: url('/heart.svg');
   background-size: contain;
   background-repeat: no-repeat;
@@ -11,7 +11,7 @@
   justify-content: center;
   align-items: center;
   font-style: normal;
-  font-size: 2.6875rem;
+  font-size: 4rem;
   padding-bottom: 0.75rem;
 }
 
@@ -28,6 +28,7 @@
 }
 
 .label {
+  font-size: 2rem;
   text-shadow: @heart-text-shadow;
   text-align: center;
 }
