--- a/client/src/components/Display/MoneyDisplay/Currencies/Currencies.module.less
+++ b/client/src/components/Display/MoneyDisplay/Currencies/Currencies.module.less
@@ -26,7 +26,9 @@
 }
 
 .eText {
+  padding-right: 30px;
   & span:first-of-type {
+    letter-spacing: 0.5rem;
     font-size: 2.4rem;
   }
   & span {
