--- a/client/src/components/Display/MoneyDisplay/Logos/Logos.module.less
+++ b/client/src/components/Display/MoneyDisplay/Logos/Logos.module.less
@@ -1,6 +1,6 @@
 .logosContainer {
   width: 100%;
-  justify-content: center;
+  justify-content: space-around;
   display: flex;
   align-items: center;
   box-sizing: initial;
